Fixed link in list-group overlapping font-awesome icon

--- a/barebones/_barebones-font.scss
+++ b/barebones/_barebones-font.scss
@@ -34,5 +34,5 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6 {
-  font-family: johnston100-medium, "Helvetica Neue", Helvetica, Arial, "sans-serif", "Font `Awesome 5 Free" !important;
+  font-family: johnston100-regular, "Helvetica Neue", Helvetica, Arial, "sans-serif", "Font `Awesome 5 Free" !important;
 }
