--- a/barebones/_barebones-icons.scss
+++ b/barebones/_barebones-icons.scss
@@ -34,12 +34,12 @@ h1 {
 
   a {
     pointer-events: auto;
-  }
-
-  a[class*="icon-"] {
     position: relative;
     width: 100%!important;
     display: block!important;
+  }
+
+  a[class*="icon-"] {
   
     &:after {
       font-family: "Font Awesome 5 Free";
@@ -47,14 +47,18 @@ h1 {
       position: absolute;
       right: 0rem;
     }
-  }  
-}
 
-// needs right adjustment for each specific icon to keep in centre with each other
-.list-group-item a {
-  &.icon-internal:after { content: "\f105"; right: .4rem; }
-  &.icon-external:after { content: "\f35d";  }
-  &.icon-download:after { content: "\f019"; right: .2rem;  }
+    // span is required to provide spacing
+    span {
+      padding-right: 2rem;
+    }
+  }  
+
+  a {
+    &.icon-internal:after { content: "\f105"; right: .4rem; }
+    &.icon-external:after { content: "\f35d";  }
+    &.icon-download:after { content: "\f019"; right: .2rem;  }
+  }
 }
 
 
